--- a/css/main.css
+++ b/css/main.css
@@ -1,13 +1,16 @@
+@import url(https://fonts.googleapis.com/css?family=Lato);
 a {
   text-decoration: none;
   color: #d1f5f8; }
 
 body {
-  padding-top: 50px; }
+  padding-top: 50px;
+  font-family: 'Lato',sans-serif; }
 
 header nav {
   position: fixed;
   display: flex;
+  top: 0;
   justify-content: space-around;
   width: 100%;
   height: 50px;
@@ -29,5 +32,81 @@ header nav {
 #main div {
   height: 800px;
   width: 100%;
-  background-color: pink;
-  border: 1px solid black; }
+  background-color: #ffffff; }
+  #main div#slide4 .openDialog {
+    font-size: 18px;
+    background-color: #d1f5f8;
+    transition: background-color 1s ease-in-out,font-size 1.5s ease-in-out;
+    border: none;
+    outline: none;
+    position: absolute;
+    bottom: 2%;
+    left: 35%;
+    height: 3%;
+    width: 30%; }
+    #main div#slide4 .openDialog:hover {
+      background-color: #81e4e6;
+      font-size: 27px; }
+  #main div#slide4 #regForm {
+    display: none;
+    position: fixed;
+    left: 0;
+    top: 0;
+    background: rgba(196, 206, 255, 0.4);
+    width: 100%;
+    height: 100%;
+    z-index: 1000; }
+    #main div#slide4 #regForm div {
+      height: auto; }
+    #main div#slide4 #regForm .reg-form {
+      position: fixed;
+      left: 20%;
+      top: 15%;
+      width: 60%;
+      height: 70%;
+      background-color: white; }
+      #main div#slide4 #regForm .reg-form .content.dialog {
+        border: none; }
+        #main div#slide4 #regForm .reg-form .content.dialog form .field {
+          width: 40%;
+          margin: 30px auto; }
+          #main div#slide4 #regForm .reg-form .content.dialog form .field label {
+            width: 30%;
+            display: inline-block;
+            white-space: nowrap;
+            margin: 10px 0; }
+          #main div#slide4 #regForm .reg-form .content.dialog form .field input {
+            float: right;
+            width: 100%; }
+            #main div#slide4 #regForm .reg-form .content.dialog form .field input[type="submit"] {
+              outline: none;
+              border: none;
+              margin: 0 auto;
+              border-radius: 6%;
+              position: absolute; }
+      #main div#slide4 #regForm .reg-form header {
+        height: 10%;
+        border-bottom: 1px solid #a3a3a3; }
+        #main div#slide4 #regForm .reg-form header h1 {
+          padding-top: 2%;
+          padding-left: 4%;
+          font-weight: bold; }
+        #main div#slide4 #regForm .reg-form header button {
+          position: absolute;
+          right: 0;
+          top: 0;
+          border: none;
+          outline: none;
+          background-color: inherit;
+          transition: background-color 0.5s,color 0.5s; }
+          #main div#slide4 #regForm .reg-form header button:hover {
+            background-color: #a3a3a3;
+            color: white; }
+
+.button, #main div#slide4 #regForm .reg-form .content.dialog form .field input[type="submit"] {
+  width: 150px;
+  height: 40px;
+  background-color: #d1f5f8;
+  transition: background-color 1s ease-in-out,font-size 1.5s ease-in-out; }
+  .button:hover, #main div#slide4 #regForm .reg-form .content.dialog form .field input[type="submit"]:hover {
+    background-color: #81e4e6; }
