--- a/css/main.css
+++ b/css/main.css
@@ -1,38 +1,76 @@
 @import url(https://fonts.googleapis.com/css?family=Lato);
 a {
   text-decoration: none;
-  color: #d1f5f8; }
+  color: black; }
 
 body {
   padding-top: 50px;
-  font-family: 'Lato',sans-serif; }
+  font-family: 'Lato',sans-serif;
+  background-color: #fff798; }
 
-header nav {
-  position: fixed;
+header {
   display: flex;
-  top: 0;
-  justify-content: space-around;
   width: 100%;
-  height: 50px;
-  line-height: 50px;
-  text-align: center;
-  background-color: #3cd0e5; }
-  header nav ul {
-    width: 100%; }
-    header nav ul li {
-      border-radius: 7%;
-      width: 15%;
-      margin: auto 4%;
-      display: inline-block;
-      list-style-type: none;
-      transition: background-color 0.7s ease-in-out; }
-      header nav ul li:hover {
-        background-color: #5de2d4; }
+  justify-content: space-between;
+  height: 50px; }
+  header .logo {
+    width: 20%;
+    position: relative;
+    top: -27px;
+    left: 5%;
+    z-index: 1111;
+    background-image: url("../img/logo.png");
+    background-size: 75%;
+    background-repeat: no-repeat; }
+  header nav {
+    width: 60%; }
+    header nav ul {
+      position: absolute;
+      top: 1.1%;
+      right: 0;
+      width: 60%; }
+      header nav ul li {
+        list-style-type: none;
+        display: inline-block;
+        width: 100px;
+        height: 35px;
+        margin-right: 50px;
+        text-align: center;
+        line-height: 35px;
+        background-size: 100%; }
+        header nav ul li:first-child {
+          background-image: url("../img/shape1.png"); }
+        header nav ul li:nth-child(2) {
+          background-image: url("../img/shape2.png"); }
+        header nav ul li:nth-child(3) {
+          background-image: url("../img/shape3.png"); }
+        header nav ul li:nth-child(4) {
+          background-image: url("../img/shape4.png"); }
+
+#main #slide1 {
+  background-image: url("../img/slide1.png");
+  background-size: 95%;
+  background-repeat: no-repeat;
+  width: 95%;
+  margin: 0 auto; }
+
+#main #slide2 {
+  background-image: url("../img/slide2.png");
+  background-size: 95%;
+  background-repeat: no-repeat;
+  width: 95%;
+  margin: 0 auto; }
+
+#main #slide4 {
+  background-image: url("../img/slide3.png");
+  background-size: 95%;
+  background-repeat: no-repeat;
+  width: 95%;
+  margin: 0 auto; }
 
 #main div {
   height: 800px;
-  width: 100%;
-  background-color: #ffffff; }
+  width: 100%; }
   #main div#slide4 .openDialog {
     font-size: 18px;
     background-color: #d1f5f8;
@@ -40,7 +78,7 @@ header nav {
     border: none;
     outline: none;
     position: absolute;
-    bottom: 2%;
+    bottom: 10%;
     left: 35%;
     height: 3%;
     width: 30%; }
