--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -1,7 +1,7 @@
 
 a{
     text-decoration: none;
-    color: #d1f5f8;
+    color: black;
 }
 @import url(https://fonts.googleapis.com/css?family=Lato);
 @mixin border-radius($radius){
@@ -10,45 +10,82 @@ a{
 body{
     padding-top: 50px;
     font-family: 'Lato',sans-serif;
+    background-color: #fff798;
 }
 header{
-    nav{
-        position: fixed;
-        display: flex;
-        top: 0;
-        justify-content: space-around;
-        width: 100%;
-        height: 50px;
-        line-height: 50px;
-      text-align: center;
-       background-color: #3cd0e5;
-        ul{
-            width: 100%;
-            
-            li{
-               
-                border-radius: 7%;
-                width: 15%;
-                margin: auto 4%;
-                display: inline-block;
-                list-style-type: none;
-                
-                     transition: background-color 0.7s ease-in-out;
-                &:hover{
-                     background-color: #5de2d4;
-                }
-            }
-        }
-    }
-    
-    
+   display: flex;
+   width: 100%;
+   justify-content: space-between;
+   .logo{
+       width: 20%;
+       position: relative;
+       top: -27px;
+       left: 5%;
+       z-index: 1111;
+       background-image: url('../img/logo.png');
+       background-size: 75%;
+       background-repeat: no-repeat;
+       
+   }
+   height: 50px;
+   nav{
+       width: 60%;
+       ul{
+          position: absolute;
+          top: 1.1%;
+          right: 0;
+           width:60%;
+           li{
+               list-style-type: none;
+               display: inline-block;
+               width: 100px;
+               height: 35px;
+               margin-right: 50px;
+               text-align: center;
+               line-height: 35px;
+               background-size: 100%;
+               &:first-child{
+                   background-image: url('../img/shape1.png');
+               }
+               &:nth-child(2){
+                   background-image: url('../img/shape2.png'); 
+               }
+                &:nth-child(3){
+                   background-image: url('../img/shape3.png'); 
+               }
+                &:nth-child(4){
+                   background-image: url('../img/shape4.png'); 
+               }
+           }
+       }
+   }
 }
 #main{
+    #slide1{ 
+        background-image: url('../img/slide1.png');
+        background-size: 95%;
+        background-repeat: no-repeat;
+    width: 95%;
+    margin: 0 auto;       
+    }
+     #slide2{ 
+        background-image: url('../img/slide2.png');
+        background-size: 95%;
+        background-repeat: no-repeat;
+    width: 95%;
+    margin: 0 auto;       
+    }
+     #slide4{ 
+        background-image: url('../img/slide3.png');
+        background-size: 95%;
+        background-repeat: no-repeat;
+    width: 95%;
+    margin: 0 auto;       
+    }
     div{
         height: 800px;
         width: 100%;
-        background-color: #ffffff;
-      
+       
         &#slide4{
             .openDialog{
                 &:hover{
@@ -61,7 +98,7 @@ header{
                 border:none;
                 outline: none;
                 position: absolute;
-                bottom: 2%;
+                bottom: 10%;
                 left: 35%;
                 height: 3%;
                 width: 30%;
